# hyperhyphen

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
hyperhyphen/: __init__.py  _lib.py  appdirs.py  core.py  dictionaries.py  hyphenate.py
hyperhyphen/lib/: hyphenate.c
lib/: hyphen.h  hyphenate.c  hyphenate.h
src/hyperhyphen/: _lib.py
src/lib/: hyphen.c  hyphenate.c
tests/: test_dictionary.py  test_hyperhyphen.py
