[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperhyphen"
version = "1.0.0"
requires-python = ">= 3.13"
description = "Hyper fast hyphenation for Python"
authors = [
    {name = "Laurens Janssen", email = "digi-deity@laurens.xyz"}
]
license = {text = "Apache-2.0"}
readme = "README.md"

[tool.setuptools.packages.find]
include = ["hyperhyphen"]

[tool.setuptools.exclude-package-data]
pdfextract = ["*.c"]

[tool.cibuildwheel]

test-command = "pytest {project}/tests"
test-requires = ["pytest"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]